--- a/RTE/Device/STM32F429ZITx/STCubeGenerated/STCubeGenerated.ioc
+++ b/RTE/Device/STM32F429ZITx/STCubeGenerated/STCubeGenerated.ioc
@@ -82,13 +82,13 @@ PCC.PartNumber=STM32F429ZITx
 PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
-PCC.Vdd=null
+PCC.Vdd=3.3
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -108,6 +108,7 @@ ProjectManager.ProjectFileName=STCubeGenerated.ioc
 ProjectManager.ProjectName=STCubeGenerated
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
+ProjectManager.TemplatesList=\\FrameworkCubeMX_gpdsc.ftl,\\MX_Device_h.ftl,
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_TIM2_Init-TIM2-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-SystemClock_Config-RCC-false-HAL-false
@@ -156,7 +157,7 @@ SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
 SH.COMP_DAC1_group.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Period,TIM_MasterOutputTrigger,AutoReloadPreload
-TIM2.Period=874
+TIM2.Period=437
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
