--- a/RTE/Device/STM32F429ZITx/STCubeGenerated/STCubeGenerated.ioc
+++ b/RTE/Device/STM32F429ZITx/STCubeGenerated/STCubeGenerated.ioc
@@ -7,8 +7,9 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
+DAC.DAC_OutputBuffer=DAC_OUTPUTBUFFER_DISABLE
 DAC.DAC_Trigger=DAC_TRIGGER_T2_TRGO
-DAC.IPParameters=DAC_Trigger
+DAC.IPParameters=DAC_Trigger,DAC_OutputBuffer
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.ADC1.0.Instance=DMA2_Stream0
@@ -47,11 +48,9 @@ Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PA4
 Mcu.Pin1=PC4
-Mcu.Pin2=PA13
-Mcu.Pin3=PA14
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=6
+Mcu.Pin2=VP_SYS_VS_Systick
+Mcu.Pin3=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=4
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -69,10 +68,6 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA13.Mode=Serial_Wire
-PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Serial_Wire
-PA14.Signal=SYS_JTCK-SWCLK
 PA4.Signal=COMP_DAC1_group
 PC4.Signal=ADCx_IN14
 PCC.Checker=false
@@ -157,7 +152,7 @@ SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
 SH.COMP_DAC1_group.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.IPParameters=Period,TIM_MasterOutputTrigger,AutoReloadPreload
-TIM2.Period=437
+TIM2.Period=874
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
